--- a/index.html
+++ b/index.html
@@ -140,17 +140,16 @@
             </span>
           </span>
           <div class="download">
-            <!-- lien qui force le téléchargement et garde un nom de fichier lisible -->
-            <a
-              href="/./assets/folder/CV Portfolio.pdf"
-              download="CV_Ndako_Yannick.pdf"
-              class="btn-download"
-              aria-label="Download Resume"
-            >
-              Télécharger mon CV
-              <i class="fa-solid fa-file-import" aria-hidden="true"></i>
-            </a>
-          </div>
+  <a 
+    href="https://raw.githubusercontent.com/CodeSage25/VOTRE-REPO/main/assets/folder/CV_Portfolio.pdf"
+    download="CV_Ndako_Yannick.pdf"
+    class="btn-download"
+    aria-label="Download Resume"
+  >
+    Télécharger mon CV
+    <i class="fa-solid fa-file-import" aria-hidden="true"></i>
+  </a>
+</div>
         </div>
       </div>
     </section>
@@ -182,7 +181,6 @@
             Développeur<br />
             Front-end
           </h3>
-        
 
           <ul class="menu">
             <li>
@@ -226,7 +224,7 @@
               </p>
             </li>
           </ul>
-            <input type="checkbox" id="toggle" />
+          <input type="checkbox" id="toggle" />
           <label for="toggle" class="toggle-btn"></label>
         </div>
         <div class="boite-container">
@@ -558,7 +556,7 @@
                     href="https:/www.linkedin.com/in/ndako-yannick"
                     target="_blank"
                   >
-                  Ndako Yannick
+                    Ndako Yannick
                   </a>
                 </p>
               </div>
@@ -587,17 +585,23 @@
               <a href="#mail">Contact</a>
             </li>
             <li>
-              <a href="https:/www.linkedin.com/in/ndako-yannick" target="_blank">
+              <a
+                href="https:/www.linkedin.com/in/ndako-yannick"
+                target="_blank"
+              >
                 <i class="fa-brands fa-linkedin-in"></i>
               </a>
             </li>
             <li>
-              <a href="https://github.com/CodeSage25" target="_blank"">
+              <a href="https://github.com/CodeSage25" target="_blank">
                 <i class="fa-brands fa-github"></i>
               </a>
             </li>
             <li>
-              <a href="https://www.instagram.com/ndako.yannick/" target="_blank">
+              <a
+                href="https://www.instagram.com/ndako.yannick/"
+                target="_blank"
+              >
                 <i class="fa-brands fa-instagram"></i>
               </a>
             </li>
